Register succeed but repassword failed
